cmake_minimum_required(VERSION 3.15)
project(AdventOfCode_2018)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_1)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_2)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_3)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_4)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_5)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_6)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_7)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_8)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_9)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_10)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_11)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_12)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_13)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_14)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_15)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_16)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_17)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_18)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_19)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_20)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_21)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_22)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_23)
#add_subdirectory(${PROJECT_SOURCE_DIR}/src/day_24)